# tradingview_template

./: README.md  basic.py  pyproject.toml  script.pine
templates/: head.pine
