[tool.poetry]
name = "tradingview_template"
version = "0.1.0"
description = "messing around with building pinescript with jinja templates"
authors = ["dgnsrekt <dgnsrekt@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.2"
pytest-watch = "^4.2.0"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
